# rlibphonenumber-wasm

./: Cargo.toml  Readme.md  package-lock.json  package.json  vitest.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: static.yml
benches/: phonenumber.bench.js
example/: example.html
src/: lib.rs  wasm_bindgen.rs
tests/: phonenumber.test.js
